[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmt"
version = "0.1.0"
description = "pip installable python module example"
readme = "README.rst"
authors = [
  {name = "Omar Ferchichi", email = "ferchichiomar20@gmail.com"}
]
maintainers = [
  {name = "Omar Ferchichi", email = "ferchichiomar20@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/omar20ferchichi/pmt/issues"
changelog = "https://github.com/omar20ferchichi/pmt/blob/master/changelog.md"
homepage = "https://github.com/omar20ferchichi/pmt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

